src/pages/pages.css
.page-content {
    margin-top: 150px;
    @media only screen and (max-width: 800px) {
        margin-top: 50px;
    }
    font-family: 'Nanum Myeongjo', cursive;
    line-height: 26px;

}
/* Hero page */

.hero {
    width: 100vw;
    display: flex;
    flex-direction: column;
    padding-bottom: 100px;
    padding-top: 50px;
    @media only screen and (max-width: 800px) {
        margin-top: 0px;
        justify-content: center;
        align-items: center;
    }
}

.boxes {
    display: flex;
    height: 450px;
    @media only screen and (max-width: 800px) {
        height: 200px;
    }
}

.green-box {
    background: #243027;
    width: 42vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    @media only screen and (max-width: 800px) {
        display: none !important; 
    }
}

.beige-box {
    background: #f5e6d5;
    width: 55vw;
    margin-left: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    @media only screen and (max-width: 800px) {
        background: white;
        width: 100vw;
    }

}

.hero-image {
    width: 400px;
    margin-top: -400px;
    margin-left: auto;
    margin-right: 52vw;
    border-radius: 200px 200px 0px 0px; 
    @media only screen and (max-width: 800px) {
        width: 300px;
        height: 300px;
        margin-top: 0px;
        margin-right: auto;
        border-radius: 150px 150px 150px 150px; 
        object-fit: cover;

    }

}

.hero-image-div {
    display: flex;
}

.squiggle {
    height: 100%;
}

.hello-message {
    font-family: 'Nanum Myeongjo', cursive;

    @media only screen and (max-width: 800px) {
        font-size: 22px;
    }
}

.hero-text {
    font-family: 'Nanum Myeongjo', cursive;
    font-size: 24px;
    max-width: 80%;
    @media only screen and (max-width: 800px) {
        font-size: 14px;
    }
    line-height: 32px;

}

.subsection-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 60%;
    margin-left: 20%;
    @media only screen and (max-width: 800px) {
        width: 90%;
        margin-left: 5%;

    }

}

.subsection-description {
    font-size: 20px;
    margin-block-start: 0px;
    @media only screen and (max-width: 800px) {
        font-size: 14px;

    }
}

.home-table {
    text-align: left;
    font-size: 18px;
    padding-bottom: 50px;
    @media only screen and (max-width: 800px) {
        font-size: 12px;
    }
}

td {
    border-top: 1px dotted grey;
    line-height: 50px;
    @media only screen and (max-width: 800px) {
        line-height: 30px;
    }

  }

.dates {
    width: 180px;
    @media only screen and (max-width: 800px) {
        width: 120px;
    }
}
/* About page */

.about-section {
    padding: 0 100px;
    @media only screen and (max-width: 800px) {
        padding: 0 20px;
    }
}

.about-boxes {
    display: flex;
    height: 350px;
    justify-content: center;
    padding: 20px 0;
    @media only screen and (max-width: 800px) {
        height: 200px;
    }
}

.about-beige-box {
    background: #f5e6d5;
    width: 55vw;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    border-radius: 10% 0 0 10%;
    @media only screen and (max-width: 800px) {
        background: white;
        width: 100vw;
        justify-content: start;

    }

}

.about-image-div {
    display: flex
}

.about-image {
    border-radius: 0 10% 10% 0;
    @media only screen and (max-width: 800px) {
        border-radius: 10% 10% 10% 10%;
    }

}

.about-text {
    font-family: 'Nanum Myeongjo', cursive;
    font-size: 24px;
    max-width: 80%;
    line-height: 32px;
    @media only screen and (max-width: 800px) {
        font-size: 14px;
        line-height: 20px;
    }

}



/* Contact Page */
.contact-box-div {
    display: flex;
    justify-content: center;
    height: 450px;
    @media only screen and (max-width: 800px) {
        height: 200px;
    }
}

.connect-message {
    font-family: 'Nanum Myeongjo', cursive;
    font-size: 50px;

    @media only screen and (max-width: 800px) {
        font-size: 22px;
    }
}


.contact-green-box {
    background: #243027;
    width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: white;
    padding: 150px;
    border-radius: 10%;
    @media only screen and (max-width: 800px) {
    }
}

.contact {
    line-height: 40px;
    font-size: 20px;
}

.contact-link:link {
    color: white;
    background-color: transparent;
}

.contact-link:visited {
    color: white;
    background-color: transparent;

  }

.contact-link:hover {
    color: #243027;
    background-color: white;
    font-weight: bold;
}

.contact-logo {
    width: 30px;
    padding-right: 15px;
    top: 6px;
    position: relative;
}

